--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.4",
     "@fontsource/bebas-neue": "^5.0.18",
     "astro": "^4.4.4",
     "clsx": "^2.1.0",
