--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.5",
+    "@astrojs/markdoc": "^0.9.0",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.4",
     "@fontsource/bebas-neue": "^5.0.18",
+    "@keystatic/astro": "^4.0.0",
+    "@keystatic/core": "^0.4.0",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
     "astro": "^4.4.4",
     "clsx": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
